upgrade rest of micros to Spring Boot 2 and Java 11